--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             })(window.location);
         </script>
 
-        <title>TheCyberHUB</title>
+        <title>Byte Busters CTF</title>
     </head>
     <body>
         <div id="root"></div>
